@@ -56,3 +56,5 @@ git-annex: sync: 1 failed
 
 # End of transcript or log.
 """]]
+
+> [[fixed|done]] --[[Joey]]
