@@ -13,6 +13,9 @@ git-annex (5.20150114) UNRELEASED; urgency=medium
   * Fix wording of message displayed when unable to get a file that
     is available in untrusted repositories.
   * Windows: Fix running of the pre-commit-annex hook.
+  * Avoid using fileSize which maxes out at just 2 gb on Windows.
+    Instead, use hFileSize, which doesn't have a bounded size.
+    Fixes support for files > 2 gb on Windows.
 
  -- Joey Hess <id@joeyh.name>  Tue, 13 Jan 2015 17:03:39 -0400
 
